<resources>
    <string name="app_name">SIA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--landing-->
    <string name="landing_title_one">Welcome</string>
    <string name="landing_title_two">Cloud</string>
    <string name="landing_title_three">Make yours</string>

    <string name="landing_desc_one">Welcom in SIA (Smart Integrated Attendance),SIA help you deal with absenteeism easily.</string>
    <string name="landing_desc_two">All processed using cloud computing. We provide open API to your work.</string>
    <string name="landing_desc_three">Make your attendance to your grub,organization,school,etc.</string>

    <string name="landing_signin">Sign In</string>
    <string name="landing_signup">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- login -->
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="forget_pass">Forget password? reset password.</string>

    <!--register-->
    <string name="input_name">Name</string>
    <string name="btn_register">Register</string>
    <string name="term_register">With click register,you agree term and condition.</string>

    <!--reset password -->
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Enter your email address, password will be send to your email address.</string>

    <!-- menu drawable navigation-->
    <string name="about_app">About</string>

    <!--main content -->

    <string name="title_one">Join Event</string>
    <string name="desc_one">Attend events and join the absences.</string>

    <string name="title_two">Create Event</string>
    <string name="desc_two">Create and manage your event attendance.</string>

    <string name="title_three">Event History</string>
    <string name="desc_three">Open the event that you created to see people in attendance.</string>

    <string name="title_four">Attendance History</string>
    <string name="desc_four">Open history of event you attended.</string>

    <!-- setting -->


    <string name="edit_name">Edit name</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_password">Change password</string>
    <string name="reset_pass">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="done">Done</string>

    <string name="name">Name</string>

    <string name="old_email">Old email</string>
    <string name="new_email">New email</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>


</resources>
