<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/content_four"
    tools:context="com.tumpi.sia.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_content_main"
            android:paddingRight="@dimen/padding_content_main"
            android:paddingTop="@dimen/padding_top_bottom"
            android:paddingBottom="@dimen/padding_top_bottom"
            android:background="@color/content_one">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_event_black_24dp"
                android:id="@+id/imageView" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_one"
                    android:id="@+id/textView2"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/desc_one"
                    android:id="@+id/textView3"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                 />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_two"
            android:paddingLeft="@dimen/padding_content_main"
            android:paddingRight="@dimen/padding_content_main"
            android:paddingTop="@dimen/padding_top_bottom"
            android:paddingBottom="@dimen/padding_top_bottom"
           >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_note_add_black_24px"
                android:id="@+id/imageViewa" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayouta"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageViewa"
                android:layout_toEndOf="@+id/imageViewa"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_two"
                    android:id="@+id/textViewa"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/desc_two"
                    android:id="@+id/textViewa1"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_three"
            android:paddingLeft="@dimen/padding_content_main"
            android:paddingRight="@dimen/padding_content_main"
            android:paddingTop="@dimen/padding_top_bottom"
            android:paddingBottom="@dimen/padding_top_bottom">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_assignment_black_24dp"
                android:id="@+id/imageViewb" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayoutb"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageViewb"
                android:layout_toEndOf="@+id/imageViewb"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_three"
                    android:id="@+id/textViewb"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/desc_three"
                    android:id="@+id/textViewb1"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_four"
            android:paddingLeft="@dimen/padding_content_main"
            android:paddingRight="@dimen/padding_content_main"
            android:paddingTop="@dimen/padding_top_bottom"
            android:paddingBottom="@dimen/padding_top_bottom">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_assignment_turned_in_black_24dp"
                android:id="@+id/imageViewc" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayoutc"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageViewc"
                android:layout_toEndOf="@+id/imageViewc"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_four"
                    android:id="@+id/textViewc"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/desc_four"
                    android:id="@+id/textViewc1"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>


