<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_setting"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tumpi.sia.activity.SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="OpenEditName"
            android:paddingTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivContactItem6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:layout_above="@+id/view"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/alamat_pekerja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem6"
                    android:layout_toRightOf="@id/ivContactItem6"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/edit_name"
                    android:textSize="17dp"
                    android:textColor="#212121" />


                <View
                    android:layout_below="@id/alamat_pekerja"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem6"
                    android:layout_toRightOf="@id/ivContactItem6"
                    android:id="@+id/view" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="OpenEditEmail"
            android:paddingTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivContactItem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_alignBottom="@+id/item_about"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/item_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem1"
                    android:layout_toRightOf="@id/ivContactItem1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/edit_email"
                    android:textSize="17dp"
                    android:textColor="#212121" />


                <View
                    android:layout_below="@id/item_about"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem1"
                    android:layout_toRightOf="@id/ivContactItem1"
                    />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="OpenEditPassword"
            android:paddingTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivContactItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vpn_key_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_alignBottom="@+id/item_change_password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/item_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem4"
                    android:layout_toRightOf="@id/ivContactItem4"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/edit_password"
                    android:textSize="17dp"
                    android:textColor="#212121" />


                <View
                    android:layout_below="@id/item_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem4"
                    android:layout_toRightOf="@id/ivContactItem4"
                    />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivContactItem5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"

                    android:tint="@color/colorPrimary"
                    android:layout_alignBottom="@+id/rest_pass"
                    android:layout_alignParentLeft="true"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/rest_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem5"
                    android:layout_toRightOf="@id/ivContactItem5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/reset_pass"
                    android:textSize="17dp"
                    android:textColor="#212121" />


                <View
                    android:layout_below="@id/rest_pass"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem5"
                    android:layout_toRightOf="@id/ivContactItem5"
                    />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_out_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingTop="20dp"
            android:onClick="logOutApp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivContactItem2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorPrimary"
                    android:layout_alignBottom="@+id/item_about2"
                    android:layout_alignParentLeft="true"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/item_about2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem2"
                    android:layout_toRightOf="@id/ivContactItem2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/log_out"
                    android:textSize="17dp"
                    android:textColor="#212121" />


                <View
                    android:layout_below="@id/item_about2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivContactItem2"
                    android:layout_toRightOf="@id/ivContactItem2"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>